--- a/src/main/resources/templates/chart_report.vm
+++ b/src/main/resources/templates/chart_report.vm
@@ -33,6 +33,14 @@
 		line-height: 1.167;
 		margin: 0;
 	}
+	#error_message{
+		color: white;
+		text-align: center;
+		border: 1px solid;
+		border-color: #d04437;
+		border-radius: 3px;
+		background-color: #d04437;
+	}
 	
 </style>
 </head>
@@ -74,9 +82,11 @@ $webResourceManager.requireResource("jira.webresources:ajax-preview", null)
 	    		</ul>
 	    	</div>
 			##TAB END
-			<div id="message" style="color: red; padding-bottom: 5px;">
-		 			$i18n.getText($message)
-		  	</div>
+		  	#if(!$message.isEmpty())
+			  	<div id="error_message">
+			 			$i18n.getText($message)
+			  	</div>
+		  	#end
 			<div id="form_div" style="text-align: left; vertical-align: inherit; padding:5px;">
 				<table>
 					<tbody>
