--- a/src/main/resources/templates/jttp.vm
+++ b/src/main/resources/templates/jttp.vm
@@ -137,6 +137,11 @@
 	 		}
 	 	}
 	}
+	
+	function submitForm(){
+			AJS.$('#Submitbutton').attr("disabled", true);
+			return true;
+	}
 
 	var original = Calendar.prototype.show;
 	
@@ -151,7 +156,12 @@
 $webResourceManager.requireResource("jira.webresources:global-static")
 $webResourceManager.requireResource("jira.webresources:calendar")
 $webResourceManager.requireResource("jira.webresources:calendar-en")
-<form name="jttpForm"  method="post"
+#if(!$debugMessage.isEmpty())
+			  	<div id="error_message">
+			 			$debugMessage
+			  	</div>
+#end
+<form name="jttpForm" id="jttpForm"  method="post" onsubmit="submitForm();"
 					#if($isEdit) action="JiraTimetrackerWebAction.jspa?editedWorklogId=$editedWorklogId&dateFormated=$dateFormated" 
 					#elseif($isEditAll) action="JiraTimetrackerWebAction.jspa?editAllIds=$editAllIds&dateFormated=$dateFormated" 
 					#else action="JiraTimetrackerWebAction.jspa?dateFormated=$dateFormated" #end/>   
@@ -696,7 +706,8 @@ $webResourceManager.requireResource("jira.webresources:calendar-en")
 				document.getElementById("comments").disabled= true;
 				</script>
 			#else
-				<input id="Submit"  type="submit" name="submit" value="$i18n.getText('plugin.submit')" class="button" tabindex="5"/>
+				<input type="hidden" id="Submit" name="submit" disabled/>
+				<input id="Submitbutton" type="submit" name="submitbutton" value="$i18n.getText('plugin.submit')" class="button" tabindex="5" onclick="AJS.$('#Submit').val('true');AJS.$('#Submit').attr('disabled', false);"/>
 			#end
 			<input id="setting"  type="button" name="setting" onclick="location.href='JiraTimetrackerSettingsWebAction!default.jspa'" value="$i18n.getText('plugin.settings')" class="button" style="display: inline; float: right;"/>
 			<input id="cancelButton"  type="button" name="Cancel" value="$i18n.getText('plugin.cancel')" onclick="location.href='JiraTimetrackerWebAction!default.jspa?dateFormated=$dateFormated'" class="button"/>
@@ -759,7 +770,7 @@ $webResourceManager.requireResource("jira.webresources:calendar-en")
 		 	AJS.$('#issueSelect-textarea').focus();
 		 	AJS.$('#Submit').focus();
 		 });
-		 
+		 	 
 	</script>	
 </form>
 </body>
