added Table Report feature improved error messages

--- a/src/main/resources/templates/jttp.vm
+++ b/src/main/resources/templates/jttp.vm
@@ -187,14 +187,9 @@ $webResourceManager.requireResource("jira.webresources:calendar-en")
 	        		<li class="active">
 	            		<a href="JiraTimetrackerWebAction!default.jspa"><strong>Timetracker</strong></a>
 	        		</li>
-	        		<li>
-	            		<a href="JiraTimetrackerWorklogsWebAction!default.jspa"><strong>Missing Days Report</strong></a>
-	        		</li>
-
-	        		<li>
-	            		<a href="JiraTimetrackerChartWebAction!default.jspa"><strong>Chart Report</strong></a>
-	        		</li>
-
+	        		<li><a href="JiraTimetrackerWorklogsWebAction!default.jspa"><strong>Missing Days Report</strong></a></li>
+	        		<li><a href="JiraTimetrackerChartWebAction!default.jspa"><strong>Chart Report</strong></a></li>
+	        		<li><a href="JiraTimetrackerTableWebAction!default.jspa"><strong>Table Report</strong></a></li>
 	    		</ul>
 	    	</div>
 			##TAB END
