fixed handling users with changed email address in the report pages

--- a/src/main/resources/templates/chart_report.vm
+++ b/src/main/resources/templates/chart_report.vm
@@ -156,17 +156,17 @@ $webResourceManager.requireResource("jira.webresources:ajax-preview", null)
 						</tr>
 						<tr>
 							<td>
-								$i18n.getText("plugin.user"): 
+								$i18n.getText("plugin.user"):
 							</td>
 							<td>
 								<div style="width:300px;">
 									<select  id="userPicker" class="js-default-user-picker2 single-user-picker" name="userPicker" >
 								 	#if($userPickerObject)
 										<option selected="selected" 
-											value="$userPickerObject.getName()"
-									  		data-field-text="$userPickerObject.getDisplayName()"
+											value="$userPickerObject.getKey()"
+									  		data-field-text="$userPickerObject.getUser().getDisplayName()"
 									  		style="background-image:url('$avatarURL')" >
-									  	$userPickerObject.getDisplayName()
+									  	$userPickerObject.getUser().getDisplayName()
 									 	</option>
 									 #end
 									</select>
