java downgrade to 1.6 for compatibility bugfix when no need for permission check

--- a/src/main/resources/templates/error.vm
+++ b/src/main/resources/templates/error.vm
@@ -20,5 +20,8 @@
 <body>
 <p>This is the Jira Timetracker Plugin Error Page.</p>
 <p>More information about the error in the atlassian-jira.log file.</p>
+<div id="message" style="color: red; ">
+$i18n.getText($message)
+</div>
 </body>
 </html>
