--- a/src/main/resources/templates/list.vm
+++ b/src/main/resources/templates/list.vm
@@ -102,15 +102,20 @@ cursor:pointer;
 			                    	 			}
 	            								}); 
 	            					</script>
-		                    	 	<td style="vertical-align: middle;">
+		                    	 	<td style="vertical-align: middle;" align="center">
 		                    	 		<input id="hiddenWorklogId" type="hidden" value="$worklog.worklogId" >
-		                    	 		<input id="edit" type="button" name="edit" value="$i18n.getText('plugin.edit')" onclick="location.href='JiraTimetrackerWebAction.jspa?editedWorklogId=$worklog.worklogId&dateFormated=$dateFormated'" class="button" />
+		                    	 		<span class="aui-icon aui-icon-small aui-iconfont-edit"
+		                    	 			id="edit" name="edit" title="$i18n.getText('plugin.edit')"
+		                    	 			onclick="location.href='JiraTimetrackerWebAction.jspa?editedWorklogId=$worklog.worklogId&dateFormated=$dateFormated'"/>
 		                    	 	</td>
-		                    	 	<td style="vertical-align: middle;">
-		                    	 		<input id="delete" type="button" name="delete" value="$i18n.getText('plugin.delete')" onclick="location.href='JiraTimetrackerWebAction!default.jspa?deletedWorklogId=$worklog.worklogId&dateFormated=$dateFormated'" class="button"/>
+		                    	 	<td style="vertical-align:" align="center">
+		                    	 		<span class="aui-icon aui-icon-small aui-iconfont-delete"
+		                    	 			id="delete" name="delete" title="$i18n.getText('plugin.delete')"
+		                    	 			onclick="location.href='JiraTimetrackerWebAction!default.jspa?deletedWorklogId=$worklog.worklogId&dateFormated=$dateFormated'"/>
 		                    	 	</td>
-		                    	 	<td style="vertical-align: middle;">
-		                    	 		<input id="copy" type="button" name="copy" value="$i18n.getText('plugin.copy')" class="copy button"/>
+		                    	 	<td style="vertical-align:" align="center">
+		                    	 		<span class="aui-icon aui-icon-small aui-iconfont-copy-clipboard copy"
+		                    	 			id="copy" name="copy" title="$i18n.getText('plugin.copy')"
 		                    	 	</td>
 		                    	</tr>
 		                    	#set($rowCount = $rowCount + 1)
