--- a/src/main/resources/templates/list.vm
+++ b/src/main/resources/templates/list.vm
@@ -109,11 +109,14 @@ cursor:pointer;
 		                    	 		<input id="hiddenWorklogId" type="hidden" value="$worklog.worklogId" >
 		                    	 		<span class="aui-icon aui-icon-small aui-iconfont-edit"
 		                    	 			id="edit" name="edit" title="$i18n.getText('plugin.edit')"
+		                    	 			style="margin:3px"
 		                    	 			onclick="location.href='JiraTimetrackerWebAction.jspa?editedWorklogId=$worklog.worklogId&dateFormated=$dateFormated'"></span>
 		                    	 		<span class="aui-icon aui-icon-small aui-iconfont-delete"
 		                    	 			id="delete" name="delete" title="$i18n.getText('plugin.delete')"
+		                    	 			style="margin:3px"
 		                    	 			onclick="location.href='JiraTimetrackerWebAction!default.jspa?deletedWorklogId=$worklog.worklogId&dateFormated=$dateFormated'"></span>
 		                    	 		<span class="aui-icon aui-icon-small aui-iconfont-copy-clipboard copy"
+		                    	 			style="margin:3px"
 		                    	 			id="copy" name="copy" title="$i18n.getText('plugin.copy')"></span>
 		                    	 	</td>
 		                    	</tr>
