--- a/src/main/resources/templates/jttp.vm
+++ b/src/main/resources/templates/jttp.vm
@@ -698,7 +698,7 @@ $webResourceManager.requireResource("jira.webresources:calendar-en")
 			#else
 				<input type="hidden" id="Submit" name="submit" disabled/>
 				<input id="Submitbutton" type="submit" name="submitbutton" value="$i18n.getText('plugin.submit')" class="button" tabindex="5"
-					onclick="AJS.$('#Submit').val('true');AJS.$('#Submit').attr('disabled', false);"/>
+					onclick="AJS.$('#Submit').val('true');AJS.$('#Submit').attr('disabled', false); javascript:_paq.push(['trackEvent', 'User', 'Submit']); "/>
 			#end
 			<input id="setting"  type="button" name="setting" onclick="location.href='JiraTimetrackerSettingsWebAction!default.jspa'" value="$i18n.getText('plugin.settings')" class="button" style="display: inline; float: right;"/>
 			<input id="cancelButton"  type="button" name="Cancel" value="$i18n.getText('plugin.cancel')" onclick="location.href='JiraTimetrackerWebAction!default.jspa?dateFormated=$dateFormated'" class="button"/>
@@ -778,5 +778,24 @@ $webResourceManager.requireResource("jira.webresources:calendar-en")
 		 	 
 	</script>	
 </form>
+<!-- Piwik -->
+<script type="text/javascript">    
+  var _paq = _paq || [];
+    _paq.push(['setUserId', '$userId']);
+    _paq.push(['setCustomVariable', 4, 'Version', '$pluginVersion', 'page']);
+    _paq.push(['setCustomVariable', 3, 'baseURL', '$baseUrl', 'page']);
+    _paq.push(['trackPageView']);
+    _paq.push(['enableLinkTracking']);
+  (function() {
+    var u="//127.0.0.1:8090/analytics/piwik/";
+    _paq.push(['setTrackerUrl', u+'piwik.php']);
+    _paq.push(['setSiteId', 1]);
+    var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+    g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
+  })();
+
+</script>
+<noscript><p><img src="//127.0.0.1:8090/analytics/piwik/piwik.php?idsite=1" style="border:0;" alt="" /></p></noscript>
+<!-- End Piwik Code -->
 </body>
 </html>
